--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,8 +7,11 @@ parts +=
 auto-checkout =
     punjab
 
+extends = versions.cfg
+update-versions-file = versions.cfg
+
 [sources]
-punjab = git https://github.com/twonds/punjab.git rev=72c0e17a75b703de3be6f2fcf2deacd04c28ac26
+punjab = git https://github.com/twonds/punjab.git rev=00344c0c6ad8976056148bab7019dd187723cc59
 
 [depends]
 recipe = zc.recipe.egg
@@ -18,25 +21,10 @@ eggs =
     pycrypto
     pyserial
     Twisted
+    twisted
     punjab
 
-[versions]
-Twisted = 16.1.1
-attrs = 15.2.0
-cffi = 1.6.0
-cryptography = 1.3.2
-enum34 = 1.1.6
-idna = 2.1
-ipaddress = 1.0.16
-pyOpenSSL = 16.0.0
-pyasn1 = 0.1.9
-pyasn1_modules = 0.0.8
-pycparser = 2.14
-pycrypto = 2.6.1
-pyserial = 3.0.1
-service_identity = 16.0.0
-six = 1.10.0
-zope.interface = 4.1.3
+versions = versions
 
 [omelette]
 recipe = collective.recipe.omelette
